fixed random information content, used align-items: self-start;, unsure if correct solution, but it's a solution

--- a/style.css
+++ b/style.css
@@ -73,9 +73,9 @@ h3 {
 .content-box {
     display: flex;
     text-align: center;
-    justify-content: center;
+    align-items: self-start;
     gap: 2rem;
-
+    height: 25em;
 }
 
 .content-box > * {
